// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses summary page correctly 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling 
  $1,141.95
</p>
`;

exports[`should render correctly one expense on Expenses summary page 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $1.95
</p>
`;

exports[`should render correctly with zero expeses 1`] = `
<p>
  Viewing 
  0
   
  expenses
   totalling 
  $0.00
</p>
`;
